--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@ cat > index.html << 'EOF'
     <h2>Contact</h2>
     <p>
       For questions about Locale or data usage, contact:<br />
-      <a href="mailto:you@example.com">you@example.com</a>
+      <a href="mailto:greenwrench@proton.me">greenwrench@proton.me</a>
     </p>
   </main>
 </body>
